--- a/style.css
+++ b/style.css
@@ -169,7 +169,12 @@ top: 0px;
     width: 100%;
     padding: 10px;
     gap: 10px;
-    min-height: 128px;
+    height: 190px;
+    overflow: auto;
+    scrollbar-width: thin;
+    scroll-behavior: smooth;
+    scrollbar-color: #f9b702 rgba(0, 0, 0, 0.1);
+    max-height: 200px;
 }
 
 .transaktion{
